# wxWidgetsTerminalCtrl

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  terminalCtrl.cpp  terminalCtrl.h
cmake/: wxterminalConfig.cmake.in
src/: terminalCtrl.cpp
